# AIE7

01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md  README.md
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
04_Production_RAG/: ACTIVITIES_QUESTIONS.md  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangGraph.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/content/data/1974f4c0/: student_loans_low_income_students_outline.txt  (+1 more)
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
10_Open_DeepResearch/: open-deep-research.ipynb
11_cert_challenge/: .gitignore  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md  cert_challenge_doc.md  pyproject.toml
11_cert_challenge/system_design_agent_app/api/: app.py
14_LangGraph_Platform/: .gitignore  langgraph.json  pyproject.toml  test_mcp_agent.py
14_LangGraph_Platform/app/: tools.py
14_LangGraph_Platform/app/graphs/: agent_with_tools.py
(+5 files in other folders)
