[project]
name = "05-our-first-agent-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.3",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "tavily-python>=0.7.9",
    "ragas==0.2.10",
    "langchain>=0.3.19",
    "langchain-qdrant>=0.2.0",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "qdrant-client>=1.7.0",
    "pymupdf>=1.26.3",
    "rapidfuzz>=3.0.0",
]
